# erp-train

./: .gitignore  README.md  pyproject.toml
docs/: panovggt_to_qwen.md
scripts/: bootstrap.sh  common_dataset.sh  smoke_test_models.py  train_qwen2_5_vl_3b_full.sh  train_qwen2_5_vl_3b_lora.sh  train_qwen3_5_4b_full.sh  train_qwen3_5_4b_lora.sh  train_qwen3_vl_4b_full.sh  train_qwen3_vl_4b_lora.sh  train_qwen3_vl_8b_lora.sh
src/pano_qwen_erp/: __init__.py  erp_geometry.py  metrics.py  register.py  vision_adapter.py
