[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pano-qwen-erp"
version = "0.1.0"
description = "Low-intrusion ERP panoramic fine-tuning helpers for Qwen3-VL and Qwen3.5."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

